<resources>
    <string name="app_name" translatable="false">ZeChat</string>
    <string name="language_french" translatable="false">français</string>
    <string name="language_english" translatable="false">English</string>
    <string name="txt_progressdialog">Please Wait&#8230;</string>
    <string name="hint_common">Email/Username/Mobile</string><!--Login-->
    <string name="hint_password">Password</string><!--Login-->
    <string name="txt_forgot_password">Forgot Password?</string><!--Login-->
    <string name="btn_sign_up">Sign Up</string><!--Login-->
    <string name="btn_sign_in">Sign In</string><!--Login-->
    <string name="toast_success_login">Login Success!!</string><!--Login-->
    <string name="toast_failure_login">Invalid username or password!!</string><!--Login-->
    <string name="toast_failure_network_login">There was some kind of network problem. Please try again!!</string><!--Login-->
    <string name="btn_get_started">Get Started</string><!--Sign Up-->
    <string name="hint_email">Email</string><!--Sign Up-->
    <string name="hint_phone">Phone Number</string><!--Sign Up-->
    <string name="hint_user_name">Username</string><!--Sign Up-->
    <string name="txt_heading_sign_up">Sign Up</string><!--Sign Up-->
    <string name="toast_success_sign_up">Account Successfully Created!! Please login to continue.</string><!--Sign Up-->
    <string name="toast_failure_sign_up">Invalid username or password!!</string><!--Sign Up-->
    <string name="toast_email_empty_sign_up">Please enter a valid email address!!</string><!--Sign Up-->
    <string name="btn_submit">Submit</string><!--Forgot Password-->
    <string name="toast_success_forgot_pass">Password Reset Successfully!!</string><!--Forgot Password-->
    <string name="toast_failure_forgot_pass">Invalid Email!!</string><!--Forgot Password-->
    <string name="txt_social_posts">POSTS</string><!--Profile Fragment->Social Activity Layout-->
    <string name="txt_social_friends">FRIENDS</string><!--Profile Fragment->Social Activity Layout-->
    <string name="btn_add_friend">Add As Friend</string><!--Profile Fragment-->

<!-- //////////////////////////////////////TEST  STRINGS//////////////////////////////////////// -->
    <string name="txt_profile_name_age">Siri Lindsey,22</string>
    <string name="txt_profile_location">Chengdu</string>
    <string name="txt_social_total_posts">482</string>
    <string name="txt_social_total_friends">1.3k</string>
</resources>
