<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeLightGreen">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlLoginDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/bottom_margin_parent"
        android:src="@drawable/scrn_logo_no_shadow"/>

    <RelativeLayout
        android:id="@id/rlLoginDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="150dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLoginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_components">

            <EditText
                android:id="@+id/etLoginUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_common"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilLoginUserName"
            android:layout_marginTop="@dimen/top_margin_components">

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtLoginForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilLoginPassword"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:text="@string/txt_forgot_password"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="180dp">


        <Button
            android:id="@+id/btnLoginSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_rounded_corner_green_rectangle"
            android:text="@string/btn_sign_in"/>

        <Button
            android:id="@+id/btnLoginSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLoginSignIn"
            android:layout_marginBottom="@dimen/bottom_margin_parent"
            android:layout_marginTop="@dimen/top_margin_components"
            android:background="@drawable/custom_rounded_corner_rectangle"
            android:text="@string/btn_sign_up"
            android:textColor="@android:color/black"/>

    </RelativeLayout>
</RelativeLayout>
