<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeLightGreen"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <ImageView
            android:id="@+id/imgSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/img_sign_up"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlShadow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05">

        <ImageView
            android:id="@+id/imgShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/img_sign_up_shadow"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSignUpDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/bottom_margin_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="0.70"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/signUpHeading"
            style="@style/HeadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/txt_heading_sign_up"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signUpHeading"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/etSignUpUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@drawable/custom_edittext_background"
                android:hint="@string/hint_user_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilSignUpUserName"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/top_margin_components">

            <EditText
                android:id="@+id/etSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@drawable/custom_edittext_background"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilSignUpEmail"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/top_margin_components">

            <EditText
                android:id="@+id/etSignUpPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@drawable/custom_edittext_background"
                android:hint="@string/hint_phone"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilSignUpPhone"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/top_margin_components">

            <EditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@drawable/custom_edittext_background"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/component_center_horizontal_margin"
            android:layout_marginStart="@dimen/component_center_horizontal_margin"
            android:background="@drawable/custom_rounded_corner_green_rectangle"
            android:text="@string/btn_get_started"/>
    </RelativeLayout>

</LinearLayout>
