<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:id="@+id/clProfileContainer"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ablProfileAppBar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctlProfileCollapseToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorAccent"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imgProfileCollapseBackImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_astound"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsvProfileContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rlProfileDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/img_profile_total_height">

            <TextView
                android:id="@+id/txtProfileNameAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/txt_profile_name_age"/>

            <TextView
                android:id="@+id/txtProfileLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProfileNameAge"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/component_small_margin"
                android:text="@string/txt_profile_location"/>

            <ImageView
                android:id="@+id/imgProfileLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/txtProfileLocation"
                android:layout_below="@id/txtProfileNameAge"
                android:layout_toStartOf="@id/txtProfileLocation"
                android:src="@drawable/location_profile"/>


            <include
                android:id="@+id/incSocialActivity"
                layout="@layout/social_activity"/>

            <Button
                android:id="@+id/btnProfileAddFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/incSocialActivity"
                android:layout_marginTop="@dimen/component_medium_margin"
                android:text="@string/btn_add_friend"/>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfileDP"
        android:layout_width="@dimen/img_profile_diameter"
        android:layout_height="@dimen/img_profile_diameter"
        android:layout_margin="@dimen/img_profile_margin"
        android:src="@drawable/logo_astound"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="@dimen/img_profile_border"
        app:layout_anchor="@id/ablProfileAppBar"
        app:layout_anchorGravity="center|bottom"
        app:layout_collapseMode="pin"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabProfileEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/edit_profile"
        app:layout_anchor="@id/ablProfileAppBar"
        app:layout_anchorGravity="bottom|end"
        app:layout_collapseMode="pin"/>

</android.support.design.widget.CoordinatorLayout>